--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#ccc"
-    tools:context="com.dnkilic.fatihinstanbulu.loginProcess.LoginActivity">
+    tools:context="com.dnkilic.fatihinstanbulu.LoginProcess.LoginActivity">
 
 
 
