google ile giriş
google ile giriş ayarlandı ancak giriş ile ilgili ufak tefek hatalar var

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,18 +52,25 @@
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:text="Giriş"
+        android:id="@+id/loginButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/loginButton"
-        android:textColor="#fff"
         android:background="@color/colorPrimary"
-        android:layout_marginBottom="85dp"
-        android:layout_alignParentBottom="true"
+        android:text="Giriş"
+        android:textColor="#fff"
+        android:layout_below="@+id/LoginIMAGE"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:onClick="onClick"/>
+        android:layout_marginTop="76dp" />
 
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/loginButtonGoogle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/loginButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="62dp"
+        android:text="Google ile giriş" />
 
 
 </RelativeLayout>
